--- a/static/index.html
+++ b/static/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Wallos Next</h1>
+        <h1>Wallet OS</h1>
         
         <!-- 统计展示区域 -->
         <!-- Statistics display area -->
