增加黑白主题,优化界面显示,优化性能

--- a/static/index.html
+++ b/static/index.html
@@ -120,10 +120,14 @@
         }
         
         function toggleTheme() {
+            document.documentElement.classList.add('theme-transition');
             const current = document.documentElement.getAttribute('data-theme') === 'light' ? 'light' : 'dark';
             const next = current === 'light' ? 'dark' : 'light';
             localStorage.setItem('theme', next);
             applyTheme(next);
+            setTimeout(() => {
+                document.documentElement.classList.remove('theme-transition');
+            }, 300);
         }
 
         /**
